bpo-31229: Fixed wrong error messages when too many keyword arguments are received. (#3180)